# renderer

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  setup_linux_env.sh
cmake/: utils.cmake
src/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/libs/app/: CMakeLists.txt
src/libs/app/app/: base_app.cpp  base_app.hpp  vk_app.cpp  vk_app.hpp
src/libs/errors/: CMakeLists.txt
src/libs/errors/errors/: error_handler.cpp  error_handler.hpp
src/libs/logger/: CMakeLists.txt
src/libs/logger/logger/: log.cpp  log.hpp
src/libs/render_framework/: CMakeLists.txt
src/libs/render_framework/render_framework/: asset.hpp
src/libs/render_framework/render_framework/materials/: material.cpp  (+3 more)
src/libs/utils/: CMakeLists.txt
src/libs/utils/utils/: data.cpp  data.hpp
src/libs/vk_utils/: CMakeLists.txt
src/libs/vk_utils/vk_utils/: camera.cpp  camera.hpp  context.cpp  context.hpp  defs.hpp  handlers.cpp  handlers.hpp  ktx_loader.hpp  obj_loader.cpp  obj_loader.hpp  tools.cpp  tools.hpp
src/samples/: CMakeLists.txt
src/samples/base_obj_viewer_app/: CMakeLists.txt  base_obj_viewer_app.cpp  base_obj_viewer_app.hpp
src/samples/test_app/: CMakeLists.txt  dummy_obj_viewer_app.cpp  dummy_obj_viewer_app.hpp  lib.cpp  lib.hpp  main.cpp
src/samples/test_app/shaders/: dummy.frag.glsl  dummy.vert.glsl
src/samples/test_ktx_app/: CMakeLists.txt  main.cpp  test_ktx_app.cpp  test_ktx_app.hpp
src/samples/test_ktx_app/assets/: diffuse.ktx2  skybox.ktx2
src/samples/test_ktx_app/shaders/: test_ktx.frag
src/samples/test_push_constants_app/: CMakeLists.txt  main.cpp  test_push_constants_app.cpp  test_push_constants_app.hpp
src/samples/test_push_constants_app/shaders/: push_constants.frag  push_constants.vert
src/third/: CMakeLists.txt
src/third/VulkanMemoryAllocator/: CMakeLists.txt
src/third/glm/: CMakeLists.txt
src/third/stb/: CMakeLists.txt
(+22 files in other folders)
